库/XCGUI/XCGUI.pas


procedure XComboBox_EnableDropHeightFixed(hEle: HELE; bEnable: BOOL); stdcall; external XCGUI_DLL;

function XComboBox_GetSelItem(hEle: HELE): Integer; stdcall; external XCGUI_DLL;

function XComboBox_GetState(hEle: HELE): comboBox_state_; stdcall; external XCGUI_DLL;

function XComboBox_AddItemText(hEle: HELE; pText: PWideChar): Integer; stdcall; external XCGUI_DLL;

function XComboBox_AddItemTextEx(hEle: HELE; pName: PWideChar; pText: PWideChar): Integer; stdcall; external XCGUI_DLL;

function XComboBox_AddItemImage(hEle: HELE; hImage: HIMAGE): Integer; stdcall; external XCGUI_DLL;

function XComboBox_AddItemImageEx(hEle: HELE; pName: PWideChar; hImage: HIMAGE): Integer; stdcall; external XCGUI_DLL;

function XComboBox_InsertItemText(hEle: HELE; iItem: Integer; pValue: PWideChar): Integer; stdcall; external XCGUI_DLL;

function XComboBox_InsertItemTextEx(hEle: HELE; iItem: Integer; pName: PWideChar; pValue: PWideChar): Integer; stdcall; external XCGUI_DLL;

function XComboBox_InsertItemImage(hEle: HELE; iItem: Integer; hImage: HIMAGE): Integer; stdcall; external XCGUI_DLL;

function XComboBox_InsertItemImageEx(hEle: HELE; iItem: Integer; pName: PWideChar; hImage: HIMAGE): Integer; stdcall; external XCGUI_DLL;

function XComboBox_SetItemText(hEle: HELE; iItem: Integer; iColumn: Integer; pText: PWideChar): BOOL; stdcall; external XCGUI_DLL;

function XComboBox_SetItemTextEx(hEle: HELE; iItem: Integer; pName: PWideChar; pText: PWideChar): BOOL; stdcall; external XCGUI_DLL;

function XComboBox_SetItemImage(hEle: HELE; iItem: Integer; iColumn: Integer; hImage: HIMAGE): BOOL; stdcall; external XCGUI_DLL;

function XComboBox_SetItemImageEx(hEle: HELE; iItem: Integer; pName: PWideChar; hImage: HIMAGE): BOOL; stdcall; external XCGUI_DLL;

function XComboBox_SetItemInt(hEle: HELE; iItem: Integer; iColumn: Integer; nValue: Integer): BOOL; stdcall; external XCGUI_DLL;

function XComboBox_SetItemIntEx(hEle: HELE; iItem: Integer; pName: PWideChar; nValue: Integer): BOOL; stdcall; external XCGUI_DLL;

function XComboBox_SetItemFloat(hEle: HELE; iItem: Integer; iColumn: Integer; fFloat: Single): BOOL; stdcall; external XCGUI_DLL;

function XComboBox_SetItemFloatEx(hEle: HELE; iItem: Integer; pName: PWideChar; fFloat: Single): BOOL; stdcall; external XCGUI_DLL;

function XComboBox_GetItemText(hEle: HELE; iItem: Integer; iColumn: Integer): PWideChar; stdcall; external XCGUI_DLL;

function XComboBox_GetItemTextEx(hEle: HELE; iItem: Integer; pName: PWideChar): PWideChar; stdcall; external XCGUI_DLL;

function XComboBox_GetItemImage(hEle: HELE; iItem: Integer; iColumn: Integer): HIMAGE; stdcall; external XCGUI_DLL;

function XComboBox_GetItemImageEx(hEle: HELE; iItem: Integer; pName: PWideChar): HIMAGE; stdcall; external XCGUI_DLL;

function XComboBox_GetItemInt(hEle: HELE; iItem: Integer; iColumn: Integer; out pOutValue: Integer): BOOL; stdcall; external XCGUI_DLL;

function XComboBox_GetItemIntEx(hEle: HELE; iItem: Integer; pName: PWideChar; out pOutValue: Integer): BOOL; stdcall; external XCGUI_DLL;

function XComboBox_GetItemFloat(hEle: HELE; iItem: Integer; iColumn: Integer; out pOutValue: Single): BOOL; stdcall; external XCGUI_DLL;

function XComboBox_GetItemFloatEx(hEle: HELE; iItem: Integer; pName: PWideChar; out pOutValue: Single): BOOL; stdcall; external XCGUI_DLL;

function XComboBox_DeleteItem(hEle: HELE; iItem: Integer): BOOL; stdcall; external XCGUI_DLL;

function XComboBox_DeleteItemEx(hEle: HELE; iItem: Integer; nCount: Integer): BOOL; stdcall; external XCGUI_DLL;

procedure XComboBox_DeleteItemAll(hEle: HELE); stdcall; external XCGUI_DLL;

procedure XComboBox_DeleteColumnAll(hEle: HELE); stdcall; external XCGUI_DLL;

function XAd_AddRef(hAdapter: HXCGUI): Integer; stdcall; external XCGUI_DLL;

function XAd_Release(hAdapter: HXCGUI): Integer; stdcall; external XCGUI_DLL;

function XAd_GetRefCount(hAdapter: HXCGUI): Integer; stdcall; external XCGUI_DLL;

procedure XAd_Destroy(hAdapter: HXCGUI); stdcall; external XCGUI_DLL;

procedure XAd_EnableAutoDestroy(hAdapter: HXCGUI; bEnable: BOOL); stdcall; external XCGUI_DLL;

function XAdListView_Create(): HXCGUI; stdcall; external XCGUI_DLL;

function XAdListView_Group_AddColumn(hAdapter: HXCGUI; pName: PWideChar): Integer; stdcall; external XCGUI_DLL;

function XAdListView_Group_AddItemText(hAdapter: HXCGUI; pValue: PWideChar; iPos: Integer = -1): Integer; stdcall; external XCGUI_DLL;

function XAdListView_Group_AddItemTextEx(hAdapter: HXCGUI; pName: PWideChar; pValue: PWideChar; iPos: Integer = -1): Integer; stdcall; external XCGUI_DLL;

function XAdListView_Group_AddItemImage(hAdapter: HXCGUI; hImage: HIMAGE; iPos: Integer = -1): Integer; stdcall; external XCGUI_DLL;

function XAdListView_Group_AddItemImageEx(hAdapter: HXCGUI; pName: PWideChar; hImage: HIMAGE; iPos: Integer = -1): Integer; stdcall; external XCGUI_DLL;

function XAdListView_Group_SetText(hAdapter: HXCGUI; iGroup: Integer; iColumn: Integer; pValue: PWideChar): BOOL; stdcall; external XCGUI_DLL;

function XAdListView_Group_SetTextEx(hAdapter: HXCGUI; iGroup: Integer; pName: PWideChar; pValue: PWideChar): BOOL; stdcall; external XCGUI_DLL;

function XAdListView_Group_SetImage(hAdapter: HXCGUI; iGroup: Integer; iColumn: Integer; hImage: HIMAGE): BOOL; stdcall; external XCGUI_DLL;

function XAdListView_Group_SetImageEx(hAdapter: HXCGUI; iGroup: Integer; pName: PWideChar; hImage: HIMAGE): BOOL; stdcall; external XCGUI_DLL;

function XAdListView_Group_GetCount(hAdapter: HXCGUI): Integer; stdcall; external XCGUI_DLL;

function XAdListView_Item_GetCount(hAdapter: HXCGUI; iGroup: Integer): Integer; stdcall; external XCGUI_DLL;

function XAdListView_Item_AddColumn(hAdapter: HXCGUI; pName: PWideChar): Integer; stdcall; external XCGUI_DLL;

function XAdListView_Item_AddItemText(hAdapter: HXCGUI; iGroup: Integer; pValue: PWideChar; iPos: Integer = -1): Integer; stdcall; external XCGUI_DLL;

function XAdListView_Item_AddItemTextEx(hAdapter: HXCGUI; iGroup: Integer; pName: PWideChar; pValue: PWideChar; iPos: Integer = -1): Integer; stdcall; external XCGUI_DLL;

function XAdListView_Item_AddItemImage(hAdapter: HXCGUI; iGroup: Integer; hImage: HIMAGE; iPos: Integer = -1): Integer; stdcall; external XCGUI_DLL;

function XAdListView_Item_AddItemImageEx(hAdapter: HXCGUI; iGroup: Integer; pName: PWideChar; hImage: HIMAGE; iPos: Integer = -1): Integer; stdcall; external XCGUI_DLL;

function XAdListView_Item_SetText(hAdapter: HXCGUI; iGroup: Integer; iItem: Integer; iColumn: Integer; pValue: PWideChar): BOOL; stdcall; external XCGUI_DLL;

function XAdListView_Item_SetTextEx(hAdapter: HXCGUI; iGroup: Integer; iItem: Integer; pName: PWideChar; pValue: PWideChar): BOOL; stdcall; external XCGUI_DLL;

function XAdListView_Item_SetImage(hAdapter: HXCGUI; iGroup: Integer; iItem: Integer; iColumn: Integer; hImage: HIMAGE): BOOL; stdcall; external XCGUI_DLL;

function XAdListView_Item_SetImageEx(hAdapter: HXCGUI; iGroup: Integer; iItem: Integer; pName: PWideChar; hImage: HIMAGE): BOOL; stdcall; external XCGUI_DLL;

function XAdListView_Group_DeleteItem(hAdapter: HXCGUI; iGroup: Integer): BOOL; stdcall; external XCGUI_DLL;

procedure XAdListView_Group_DeleteAllChildItem(hAdapter: HXCGUI; iGroup: Integer); stdcall; external XCGUI_DLL;

function XAdListView_Item_DeleteItem(hAdapter: HXCGUI; iGroup: Integer; iItem: Integer): BOOL; stdcall; external XCGUI_DLL;

procedure XAdListView_DeleteAll(hAdapter: HXCGUI); stdcall; external XCGUI_DLL;

procedure XAdListView_DeleteAllGroup(hAdapter: HXCGUI); stdcall; external XCGUI_DLL;

procedure XAdListView_DeleteAllItem(hAdapter: HXCGUI); stdcall; external XCGUI_DLL;

procedure XAdListView_DeleteColumnGroup(hAdapter: HXCGUI; iColumn: Integer); stdcall; external XCGUI_DLL;

procedure XAdListView_DeleteColumnItem(hAdapter: HXCGUI; iColumn: Integer); stdcall; external XCGUI_DLL;

function XAdListView_Item_GetTextEx(hAdapter: HXCGUI; iGroup: Integer; iItem: Integer; pName: PWideChar): PWideChar; stdcall; external XCGUI_DLL;

function XAdListView_Item_GetImageEx(hAdapter: HXCGUI; iGroup: Integer; iItem: Integer; pName: PWideChar): HIMAGE; stdcall; external XCGUI_DLL;

function XAdTable_Create(): HXCGUI; stdcall; external XCGUI_DLL;

procedure XAdTable_Sort(hAdapter: HXCGUI; iColumn: Integer; bAscending: BOOL); stdcall; external XCGUI_DLL;

function XAdTable_GetItemDataType(hAdapter: HXCGUI; iItem: Integer; iColumn: Integer): adapter_date_type_; stdcall; external XCGUI_DLL;

function XAdTable_GetItemDataTypeEx(hAdapter: HXCGUI; iItem: Integer; pName: PWideChar): adapter_date_type_; stdcall; external XCGUI_DLL;

function XAdTable_AddColumn(hAdapter: HXCGUI; pName: PWideChar): Integer; stdcall; external XCGUI_DLL;

function XAdTable_SetColumn(hAdapter: HXCGUI; pColName: PWideChar): Integer; stdcall; external XCGUI_DLL;

function XAdTable_AddItemText(hAdapter: HXCGUI; pValue: PWideChar): Integer; stdcall; external XCGUI_DLL;

function XAdTable_AddItemTextEx(hAdapter: HXCGUI; pName: PWideChar; pValue: PWideChar): Integer; stdcall; external XCGUI_DLL;

function XAdTable_AddItemImage(hAdapter: HXCGUI; hImage: HIMAGE): Integer; stdcall; external XCGUI_DLL;

function XAdTable_AddItemImageEx(hAdapter: HXCGUI; pName: PWideChar; hImage: HIMAGE): Integer; stdcall; external XCGUI_DLL;

function XAdTable_InsertItemText(hAdapter: HXCGUI; iItem: Integer; pValue: PWideChar): Integer; stdcall; external XCGUI_DLL;

function XAdTable_InsertItemTextEx(hAdapter: HXCGUI; iItem: Integer; pName: PWideChar; pValue: PWideChar): Integer; stdcall; external XCGUI_DLL;

function XAdTable_InsertItemImage(hAdapter: HXCGUI; iItem: Integer; hImage: HIMAGE): Integer; stdcall; external XCGUI_DLL;

function XAdTable_InsertItemImageEx(hAdapter: HXCGUI; iItem: Integer; pName: PWideChar; hImage: HIMAGE): Integer; stdcall; external XCGUI_DLL;

function XAdTable_SetItemText(hAdapter: HXCGUI; iItem: Integer; iColumn: Integer; pValue: PWideChar): BOOL; stdcall; external XCGUI_DLL;

function XAdTable_SetItemTextEx(hAdapter: HXCGUI; iItem: Integer; pName: PWideChar; pValue: PWideChar): BOOL; stdcall; external XCGUI_DLL;

function XAdTable_SetItemInt(hAdapter: HXCGUI; iItem: Integer; iColumn: Integer; nValue: Integer): BOOL; stdcall; external XCGUI_DLL;

function XAdTable_SetItemIntEx(hAdapter: HXCGUI; iItem: Integer; pName: PWideChar; nValue: Integer): BOOL; stdcall; external XCGUI_DLL;

function XAdTable_SetItemFloat(hAdapter: HXCGUI; iItem: Integer; iColumn: Integer; nValue: Single): BOOL; stdcall; external XCGUI_DLL;

function XAdTable_SetItemFloatEx(hAdapter: HXCGUI; iItem: Integer; pName: PWideChar; nValue: Single): BOOL; stdcall; external XCGUI_DLL;

function XAdTable_SetItemImage(hAdapter: HXCGUI; iItem: Integer; iColumn: Integer; hImage: HIMAGE): BOOL; stdcall; external XCGUI_DLL;

function XAdTable_SetItemImageEx(hAdapter: HXCGUI; iItem: Integer; pName: PWideChar; hImage: HIMAGE): BOOL; stdcall; external XCGUI_DLL;

function XAdTable_DeleteItem(hAdapter: HXCGUI; iItem: Integer): BOOL; stdcall; external XCGUI_DLL;

function XAdTable_DeleteItemEx(hAdapter: HXCGUI; iItem: Integer; nCount: Integer): BOOL; stdcall; external XCGUI_DLL;

procedure XAdTable_DeleteItemAll(hAdapter: HXCGUI); stdcall; external XCGUI_DLL;

procedure XAdTable_DeleteColumnAll(hAdapter: HXCGUI); stdcall; external XCGUI_DLL;

function XAdTable_GetCount(hAdapter: HXCGUI): Integer; stdcall; external XCGUI_DLL;

function XAdTable_GetCountColumn(hAdapter: HXCGUI): Integer; stdcall; external XCGUI_DLL;

function XAdTable_GetItemText(hAdapter: HXCGUI; iItem: Integer; iColumn: Integer): PWideChar; stdcall; external XCGUI_DLL;

function XAdTable_GetItemTextEx(hAdapter: HXCGUI; iItem: Integer; pName: PWideChar): PWideChar; stdcall; external XCGUI_DLL;

function XAdTable_GetItemImage(hAdapter: HXCGUI; iItem: Integer; iColumn: Integer): HIMAGE; stdcall; external XCGUI_DLL;

function XAdTable_GetItemImageEx(hAdapter: HXCGUI; iItem: Integer; pName: PWideChar): HIMAGE; stdcall; external XCGUI_DLL;
